--- a/package.json
+++ b/package.json
@@ -27,5 +27,6 @@
       "type": "git",
       "url": "https://github.com/LionsMouthDigital/vue-hex-mixins.git"
     }
-  ]
+  ],
+  "version": "1.0.0-alpha"
 }
