--- a/package.json
+++ b/package.json
@@ -63,5 +63,5 @@
       "url": "https://github.com/LionsMouthDigital/vue-hex-mixins.git"
     }
   ],
-  "version": "1.0.0-alpha"
+  "version": "1.0.0-alpha.1"
 }
