--- a/package.json
+++ b/package.json
@@ -63,5 +63,6 @@
       "url": "https://github.com/LionsMouthDigital/vue-hex-mixins.git"
     }
   ],
+  "license": "CC-BY-SA-4.0",
   "version": "1.0.0-alpha.1"
 }
